# Terraininator

./: CMakeLists.txt  README.md
dependencies/glad-opengl-4.3/include/glad/: glad.h
dependencies/glad-opengl-4.3/src/: glad.c
src/: Application.cpp  Application.h  BoundingBox.h  CMakeLists.txt  Camera.cpp  Camera.h  Geometry.cpp  Geometry.h  ImageLoader.cpp  ImageLoader.h  Light.cpp  Light.h  Loader.h  Material.cpp  Material.h  ObjLoader.h  Scene.cpp  Scene.h  Terrain.cpp  Terrain.h  Utils.h  main.cpp
src/loaders/: Loader.h  ObjLoader.cpp
src/shaders/: phong-shading.frag.glsl  phong-shading.vert.glsl
src/utils/: ShaderUtils.cpp  ShaderUtils.h
